increase pod memory, change maven_opts and enable ansicolor